============================

For the latest information visit project web site:
http://cayenne.apache.org/

To browse individual bug reports check out project issue tracker:
https://issues.apache.org/jira/browse/CAY

----------------------------------
Release: 4.1.2
Date:
----------------------------------

Changes/New Features:

CAY-2775 Change Objectstyle maven repository URL

Bug Fixes:

CAY-2727 Modeler: cgen destDir Unix platform path separator
CAY-2729 Unable to use custom templates from a folder at upper level then datamap
CAY-2730 Duplicating lines in a cgen config saved to datamap.xml
CAY-2731 Exception when setting a CLOB on H2 v2.0.202
CAY-2736 Can't use function names as a path in a string-based expression
CAY-2800 Modeler saves map.xml files with schema ordering error
CAY-2808 Modeler 4.1.1 can't save on Windows

----------------------------------
Release: 4.1.1
Date: December 17, 2021
----------------------------------

Changes/New Features:

CAY-2725 Upgrade Gradle to 7.3

Bug Fixes:

CAY-2670 CommitLog does not include FKs for deleted objects with one-way relationships
CAY-2676 Degradation: Custom class generation templates are not working anymore
CAY-2677 Modeler: Custom Class Generation Templates for Embeddables and DataMaps
CAY-2678 Inheritance warnings caused by unnecessary MappingCache creations during initialization
CAY-2679 Unstable ordering of relationships in the .map.xml file
CAY-2681 Modeler: All selected checkboxes cause project to become dirty at initialization
CAY-2690 dbimport skips length changes for BINARY and VARBINARY columns
CAY-2691 MySQL driver 8.0.x stores LocalDateTime differently than 5.1.x
CAY-2697 Read-only cgen template creates mutator methods for to-many relationships
CAY-2698 EventSubject.getSubject() is not thread safe
CAY-2702 Modeler: Callbacks table has too small default width
CAY-2721 Platform builds of CayenneModeler don't work with Java 17
CAY-2724 Duplicating relationship after editing its name
