@@ -37,9 +37,9 @@
                 <artifactId>asciidoctor-maven-plugin</artifactId>
                 <dependencies>
                     <dependency>
-                        <groupId>org.apache.cayenne.docs</groupId>
-                        <artifactId>cayenne-asciidoc-extension</artifactId>
-                        <version>${project.version}</version>
+                        <groupId>io.bootique.tools</groupId>
+                        <artifactId>hugo-asciidoctorj-extension</artifactId>
+                        <version>${hugo.asciidoctorj.extension.version}</version>
                     </dependency>
                 </dependencies>
 
@@ -57,7 +57,7 @@
                             <outputDirectory>${project.build.directory}/tmp/</outputDirectory>
                             <extensions>
                                 <extension>
-                                    <className>org.apache.cayenne.asciidoc.CayennePostProcessor</className>
+                                    <className>io.bootique.tools.asciidoctorj.HugoExtension</className>
                                 </extension>
                             </extensions>
                             <attributes>
@@ -88,7 +88,6 @@
                                 </goals>
                                 <configuration>
                                     <backend>html5</backend>
-                                    <sourceHighlighter>coderay</sourceHighlighter>
                                     <embedAssets>true</embedAssets>
                                     <attributes>
                                         <toc>left</toc>
@@ -105,7 +104,6 @@
                                 </goals>
                                 <configuration>
                                     <backend>pdf</backend>
-                                    <sourceHighlighter>coderay</sourceHighlighter>
                                     <attributes>
                                         <pagenums />
                                         <toc />
